[package]
name = "libprocmem"
version = "0.1.2"
edition = "2021"
license = "BSD-2-Clause"
description = "A /proc/<pid>/mem reading and writing library"
documentation = "https://docs.rs/libprocmem"
repository = "https://github.com/gamozolabs/libprocmem"
keywords = ["proc", "mem", "maps"]
categories = ["os::linux-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
